# ppp_nbody_simulation

./: .gitignore
nbody/: CMakeLists.txt
nbody/include/ppp/: ppp.h
nbody/src/: TestEquality.py
nbody/src/nbody/: main.c  parallel.c  single.c
test/: test.py
